<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_pagedog2"
    tools:context=".Nextpage">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="331dp"
        android:layout_height="310dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pngegg" />

    <Button
        android:id="@+id/buttonClean"
        android:layout_width="125dp"
        android:layout_height="53dp"
        android:text="@string/Button3"
        app:layout_constraintEnd_toStartOf="@+id/buttonHappy"
        app:layout_constraintStart_toEndOf="@+id/buttonHungry"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/buttonHungry"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginStart="18dp"
        android:text="@string/Button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/buttonHappy"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="11dp"
        android:text="@string/Button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textViewHu"
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/archivo"
        android:text="@string/HungryTV"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHungry" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="137dp"
        android:layout_height="35dp"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/archivo"
        android:text="@string/CleanTV"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="138dp"
        android:layout_height="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/archivo"
        android:text="@string/HappyTV"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="223dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:progressBackgroundTint="#E91E63"
        app:layout_constraintStart_toEndOf="@+id/textViewHu"
        app:layout_constraintTop_toBottomOf="@+id/buttonClean" />

</androidx.constraintlayout.widget.ConstraintLayout>